--- a/web/index.html
+++ b/web/index.html
@@ -895,9 +895,18 @@
                     <label>类别名称 *</label>
                     <input type="text" id="categoryName" placeholder="例如：餐饮" required maxlength="50">
                 </div>
-                <div class="form-group">
-                    <label>排序（越小越靠前）</label>
-                    <input type="number" id="categorySort" placeholder="例如：10" step="1">
+                <div style="display:grid;grid-template-columns:1fr 1fr;gap:16px;">
+                    <div class="form-group">
+                        <label>排序（越小越靠前）</label>
+                        <input type="number" id="categorySort" placeholder="例如：10" step="1">
+                    </div>
+                    <div class="form-group">
+                        <label>颜色</label>
+                        <div style="display:flex;gap:8px;align-items:center;">
+                            <input type="color" id="categoryColor" value="#64748b" style="width:60px;height:40px;border:1px solid var(--border);border-radius:8px;cursor:pointer;">
+                            <input type="text" id="categoryColorText" placeholder="#64748b" maxlength="20" style="flex:1;padding:12px 14px;border:1px solid var(--border);border-radius:10px;font-size:14px;background:var(--bg-input);color:var(--text-primary);font-family:monospace;">
+                        </div>
+                    </div>
                 </div>
                 <div class="modal-actions">
                     <button type="button" class="btn btn-secondary" onclick="closeCategoryModal()">取消</button>
@@ -1298,7 +1307,10 @@
                     document.getElementById('statIncomeCount').textContent = stats.income_count || 0;
                     const tbody = document.getElementById('categoryStatsTable');
                     if (stats.category_stats && stats.category_stats.length > 0) {
-                        tbody.innerHTML = stats.category_stats.map(cat => `<tr><td><span class="category-tag ${cat.category}">${cat.category}</span></td><td class="amount">¥${cat.total.toFixed(2)}</td><td>${cat.count} 条</td><td>${((cat.total / stats.total_amount) * 100).toFixed(1)}%</td></tr>`).join('');
+                        tbody.innerHTML = stats.category_stats.map(cat => {
+                            const color = getCategoryColor(cat.category);
+                            return `<tr><td><span class="category-tag" style="background: ${hexToRgba(color, 0.15)}; color: ${color};">${cat.category}</span></td><td class="amount">¥${cat.total.toFixed(2)}</td><td>${cat.count} 条</td><td>${((cat.total / stats.total_amount) * 100).toFixed(1)}%</td></tr>`;
+                        }).join('');
                     } else { tbody.innerHTML = '<tr><td colspan="4" style="text-align:center;color:var(--text-secondary);">暂无数据</td></tr>'; }
                 }
             } catch (err) { console.error('加载统计数据失败:', err); }
@@ -1335,7 +1347,7 @@
                         <td>${item.id}</td>
                         <td>${item.username || '-'}</td>
                         <td class="amount">¥${item.amount.toFixed(2)}</td>
-                        <td><span class="category-tag ${item.category}">${item.category}</span></td>
+                        <td><span class="category-tag" style="background: ${hexToRgba(getCategoryColor(item.category), 0.15)}; color: ${getCategoryColor(item.category)};">${item.category}</span></td>
                         <td>${item.description || '-'}</td>
                         <td>${formatDateTime(item.expense_time)}</td>
                         <td>
@@ -1455,20 +1467,28 @@
                 tbody.innerHTML = '<tr><td colspan="5" style="text-align:center;color:var(--text-secondary);padding:40px;">暂无类别</td></tr>';
                 return;
             }
-            tbody.innerHTML = allCategories.map(c => `
+            tbody.innerHTML = allCategories.map(c => {
+                const color = c.color || '#64748b';
+                const escapedName = (c.name || '').replace(/'/g, "\\'");
+                return `
                 <tr>
                     <td>${c.id}</td>
-                    <td><strong>${c.name}</strong></td>
+                    <td>
+                        <div style="display:flex;align-items:center;gap:8px;">
+                            <span class="category-tag" style="background: ${hexToRgba(color, 0.15)}; color: ${color};">${c.name}</span>
+                        </div>
+                    </td>
                     <td>${c.sort ?? 0}</td>
                     <td>${formatDateTime(c.created_at)}</td>
                     <td>
                         <div class="action-btns">
-                            <button class="btn btn-primary btn-sm" onclick="openEditCategoryModal(${c.id}, '${(c.name || '').replace(/'/g, "\\'")}', ${c.sort ?? 0})">编辑</button>
+                            <button class="btn btn-primary btn-sm" onclick="openEditCategoryModal(${c.id}, '${escapedName}', ${c.sort ?? 0}, '${color}')">编辑</button>
                             <button class="btn btn-danger btn-sm" onclick="openDeleteCategoryModal(${c.id})">删除</button>
                         </div>
                     </td>
                 </tr>
-            `).join('');
+            `;
+            }).join('');
         }
 
         function openCategoryModal() {
@@ -1477,16 +1497,35 @@
             document.getElementById('categoryModalSubtitle').textContent = '维护类别名称与排序';
             document.getElementById('categorySubmitBtn').textContent = '确认添加';
             document.getElementById('categoryForm').reset();
+            document.getElementById('categoryColor').value = '#64748b';
+            document.getElementById('categoryColorText').value = '#64748b';
             document.getElementById('categoryModal').classList.add('show');
         }
+        
+        // 颜色工具函数
+        function hexToRgba(hex, alpha) {
+            const r = parseInt(hex.slice(1, 3), 16);
+            const g = parseInt(hex.slice(3, 5), 16);
+            const b = parseInt(hex.slice(5, 7), 16);
+            return `rgba(${r}, ${g}, ${b}, ${alpha})`;
+        }
+        
+        // 根据类别名称获取颜色
+        function getCategoryColor(categoryName) {
+            const category = allCategories.find(c => c.name === categoryName);
+            return category?.color || '#64748b';
+        }
 
-        function openEditCategoryModal(id, name, sort) {
+        function openEditCategoryModal(id, name, sort, color) {
             editingCategoryId = id;
             document.getElementById('categoryModalTitle').textContent = '✏️ 编辑消费类别';
             document.getElementById('categoryModalSubtitle').textContent = `编辑 ID: ${id}`;
             document.getElementById('categorySubmitBtn').textContent = '保存修改';
             document.getElementById('categoryName').value = name || '';
             document.getElementById('categorySort').value = (sort ?? 0);
+            const categoryColor = color || '#64748b';
+            document.getElementById('categoryColor').value = categoryColor;
+            document.getElementById('categoryColorText').value = categoryColor;
             document.getElementById('categoryModal').classList.add('show');
         }
 
@@ -1495,12 +1534,25 @@
             editingCategoryId = null;
         }
 
+        // 颜色选择器同步
+        document.getElementById('categoryColor').addEventListener('input', function() {
+            document.getElementById('categoryColorText').value = this.value;
+        });
+        document.getElementById('categoryColorText').addEventListener('input', function() {
+            const colorValue = this.value.trim();
+            if (/^#[0-9A-Fa-f]{6}$/.test(colorValue)) {
+                document.getElementById('categoryColor').value = colorValue;
+            }
+        });
+
         document.getElementById('categoryForm').addEventListener('submit', async (e) => {
             e.preventDefault();
             const name = (document.getElementById('categoryName').value || '').trim();
             const sortStr = document.getElementById('categorySort').value;
             const sort = sortStr === '' ? 0 : parseInt(sortStr, 10);
+            const color = (document.getElementById('categoryColorText').value || '#64748b').trim();
             if (!name) { showToast('请输入类别名称', 'warning'); return; }
+            if (!/^#[0-9A-Fa-f]{6}$/.test(color)) { showToast('颜色格式不正确，请使用 #RRGGBB 格式', 'warning'); return; }
 
             try {
                 let res;
@@ -1508,13 +1560,13 @@
                     res = await fetch(`/admin/categories/${editingCategoryId}`, {
                         method: 'PUT',
                         headers: { 'Content-Type': 'application/json' },
-                        body: JSON.stringify({ name, sort })
+                        body: JSON.stringify({ name, sort, color })
                     });
                 } else {
                     res = await fetch('/admin/categories', {
                         method: 'POST',
                         headers: { 'Content-Type': 'application/json' },
-                        body: JSON.stringify({ name, sort })
+                        body: JSON.stringify({ name, sort, color })
                     });
                 }
                 const data = await res.json();
